# g-nexus-hybrid

./: .gitignore  PHASE1_LAYOUT_DRAFT.md  PHASE1_UI_PLAN.md  README.md  docker-compose.yml  project_context.md
backend/: .env.example  pyproject.toml
backend/db_migrations/: 001_initial_schema.sql
backend/src/: main.py
backend/src/core/: config.py
backend/src/db/: session.py
frontend/: package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/layout/: AppLayout.tsx  CommandPalette.tsx  Header.tsx  Sidebar.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/data/: mockData.ts
frontend/src/pages/: Dashboard.tsx  IngestionPage.tsx  LibraryPage.tsx  LoginPage.tsx  MappingPage.tsx  OperationsPage.tsx  SettingsPage.tsx
